--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+:root {
+  --bg-primary-color: #f4f9fd;
+  --primary-color: #3f8cff;
+  --thin-color: "#7D8592";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: var(--bg-primary-color);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #6a9ce6;
+}
+
+.clamp {
+  font-size: clamp(1.5rem, 5vw, 4rem);
+}
+
+.clamp1 {
+  font-size: clamp(1.5rem, 5vw, 2.8rem);
+}
+.clamp2 {
+  font-size: clamp(1.1rem, 5vw, 2rem);
+}
+
+.clamp3 {
+  font-size: clamp(1.1rem, 4vw, 1.3rem);
+}
+.clamp4 {
+  font-size: clamp(10px, 3vw, 1rem);
+}
+.clamp5 {
+  font-size: clamp(8px, 2vw, 0.8rem);
+}
+.clamp5 {
+  font-size: clamp(8px, 2vw, 0.7rem);
+}
+
+.clamp2Half {
+  font-size: clamp(1.1rem, 5vw, 1.5rem);
+}
+
+.clamp3Half {
+  font-size: clamp(0.9rem, 3.5vw, 1.1rem);
+}
+.clamp4Half {
+  font-size: clamp(0.7rem, 3vw, 0.9rem);
+}
+
+.blur-effect {
+  filter: blur(10px);
 }
