--- a/src/components/saidbar/saidbar.scss
+++ b/src/components/saidbar/saidbar.scss
@@ -3,6 +3,8 @@
 }
 .saidbar-scrolbar::-webkit-scrollbar-track {
   background-color: transparent;
+  margin: 20px;
+
 }
 .saidbar-scrolbar::-webkit-scrollbar-thumb {
   background-color: #6a9ce6;
