--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,17 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 4px;
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #6a9ce6;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none !important;
 }
 
 .clamp {
@@ -64,4 +68,66 @@ body {
 
 .blur-effect {
   filter: blur(10px);
+}
+
+.light {
+  --primary: 11, 92, 181, 1;
+
+  --background: 244, 249, 253, 1;
+  --background-secondary: 232, 242, 248;
+
+  --active-card: 232, 242, 248;
+  --hover-card: 244, 250, 253;
+
+  --thin-color: 125, 133, 146, 1;
+  --text-primary: 10, 22, 41, 1;
+  --border: 212, 212, 212;
+  --card: 255, 255, 255, 1;
+
+  --copy-primary: 23, 23, 23;
+  --copy-secondary: 115, 115, 115;
+
+  --cta: 139, 92, 246;
+  --cta-active: 124, 58, 237;
+  --cta-text: 255, 255, 255;
+
+  --button-color:59,130,246;
+
+  background: rgba(var(--background));
+  color: rgba(var(--text-primary));
+}
+
+.dark {
+  --primary: 255, 255, 255, 1;
+
+  --background: 15, 18, 45;
+  --background-secondary: 20, 24, 58;
+  --text-primary: 255, 255, 255, 1;
+  --thin-color: 125, 133, 146, 1;
+
+  --active-card: 30, 37, 71;
+  --hover-card: 25, 30, 70;
+
+  --border: 33, 37, 75;
+  --card: 23, 29, 59, 1;
+
+  --copy-primary: 250, 250, 250;
+  --copy-secondary: 115, 115, 115;
+
+  --cta: 99, 102, 241;
+  --cta-active: 79, 70, 229;
+  --cta-text: 255, 255, 255;
+
+  --button-color:30,37,71;
+  color: rgba(var(--text-primary));
+
+  background-color: rgba(var(--background));
+  /* color:rgb() */
+}
+:root {
+  --grape: 114, 35, 204;
+}
+
+.dfaf {
+  color: rgb(114, 125, 209);
 }
