--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ body {
   --primarychart:#0B5CB5;
 
   --background: 244, 249, 253, 1;
-  --background-secondary: 232, 242, 248;
+  --background-secondary: 232, 242, 248 ,1;
 
   --hr-color: 228, 230, 232, 1;
 
@@ -149,4 +149,21 @@ body {
 }
 .scrollScrolbar::-webkit-scrollbar-thumb {
   background-color: #6a9ce6;
+}
+
+.chat-back {
+  position: relative;
+  opacity: 0.9;
+}
+
+.chat-back::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('./images/chat-back1.svg');
+  opacity: 0.3;
+  z-index: -1;
 }
